--- a/ui/html/footer.partial.tmpl
+++ b/ui/html/footer.partial.tmpl
@@ -1,3 +1,7 @@
 {{define "footer"}}
-<footer>Сайт создан на <strong>Go</strong></footer>
+<footer>
+    <div class="container"> {{/* Добавляем контейнер для выравнивания */}}
+        Сайт создан на <strong>Go</strong>
+    </div>
+</footer>
 {{end}}
