main: added page for single snippet

--- a/ui/html/base.layout.tmpl
+++ b/ui/html/base.layout.tmpl
@@ -12,7 +12,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Ubuntu+Mono:400;700&display=swap" rel="stylesheet">
 
         <link rel='stylesheet' href='/static/css/main.css'>
-        <link rel='shortcut icon' href='/static/img/favicon.ico' type='image/x-icon'>
+        <link rel='shortcut icon' href='/static/img/favicon.png' type='image/x-icon'>
     </head>
     <body>
         <header>
@@ -36,10 +36,6 @@
 
         <main>
             <div class="container"> {{/* Добавляем контейнер для выравнивания */}}
-                {{/* Показываем Flash сообщения здесь, если они есть */}}
-                {{with .Flash}}
-                <div class='flash'>{{.}}</div>
-                {{end}}
 
                 {{template "main" .}}
             </div>
