--- a/ui/html/show.page.tmpl
+++ b/ui/html/show.page.tmpl
@@ -3,15 +3,17 @@
 {{define "title"}}Заметка #{{.Snippet.ID}}{{end}}
  
 {{define "main"}}
-<div class='snippet'>
-    <div class='metadata'>
-        <strong>{{.Snippet.Title}}</strong>
-        <span>#{{.Snippet.ID}}</span>
+    {{with .Snippet}}
+    <div class='snippet'>
+        <div class='metadata'>
+            <strong>{{.Title}}</strong>
+            <span>#{{.ID}}</span>
+        </div>
+        <pre><code>{{.Content}}</code></pre>
+        <div class='metadata'>
+            <time>Создана: {{.Created}}</time>
+            <time>Срок: {{.Expires}}</time>
+        </div>
     </div>
-    <pre><code>{{.Snippet.Content}}</code></pre>
-    <div class='metadata'>
-        <time>Создана: {{.Snippet.Created}}</time>
-        <time>Срок: {{.Snippet.Expires}}</time>
-    </div>
-</div>
+    {{end}}
 {{end}}
